# phishes-pdp

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPOSITORY_DESIGN.md  SECURITY.md  pdp_agent.md  phishes-pdp.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: branch-protection.yml  ci.yml  notebooks.yml  security.yml
PDP/DataDownloadTool/: DataDownloadTool.md  README.md  pyproject.toml
PDP/DataDownloadTool/notebooks/: data_download_tool.ipynb
PDP/DataDownloadTool/src/core/: dataset_catalog.yaml  utils.py
PDP/PlantGrowthModule/: PlantGrowthModule.md  README.md  pyproject.toml
PDP/PlantGrowthModule/notebooks/: plant_growth_module.ipynb
PDP/PlantGrowthModule/src/: pgm_helper.py
PDP/Task1 Plant_Growth_Module/: .gitignore  README.md  pyproject.toml  task1_agent.md
PDP/Task1 Plant_Growth_Module/code/: t1_plant_growth_module.ipynb
PDP/Task2/: .gitignore  README.md  pyproject.toml  task2.md
PDP/Task2/code/: t2_data_downloader.ipynb
PDP/Task2/code/analysis/: __init__.py  catchment.py
PDP/Task2/code/core/: __init__.py  dataset_catalog.yaml  dfsio.py  downloader.py
data-download-tool/: DESIGN_SPEC_REPOSITORY.md  DataDownloadTool.md  README.md  TECH_SPECS_DETAILED.md  TECH_SPECS_OVERVIEW.md  TECH_SPECS_PIPELINE.md  TECH_SPECS_SCRIPTS.md  pyproject.toml
data-download-tool/notebooks/: data_download_tool.ipynb
data-download-tool/sample_data/demo_rhine/: basin.dbf  basin.json  basin.shp  basin.shx
data-download-tool/src/analysis/: catchment.py  timeseries.py  visualization.py
data-download-tool/src/core/: dataset_catalog.yaml  downloader.py  folder_structure.py
data-download-tool/tests/: test_analysis_catchment.py  test_analysis_timeseries_visualization.py  test_core_dfsio.py  test_core_downloader.py  test_core_folder_structure.py  test_core_utils.py  test_package_inits.py
plant-growth-module/: PlantGrowthModule.md  README.md  pyproject.toml
plant-growth-module/notebooks/: plant_growth_module.ipynb
plant-growth-module/output_data/: LAI.dfs2  RD.dfs2  SOC.dfs2  tmax.dfs2  topt.dfs2
plant-growth-module/sample_data/: Constants_template.csv  InitConditions_template.csv  LU_template.csv  SP_template.csv  SoilProfile_gridcodes.dfs2  landuse1_clo.dfs2
plant-growth-module/sample_data/Model/: MSHE_PGM_eg.she  PHISHES_8_v2.ecolab
plant-growth-module/src/plant_growth_module/: __init__.py  pgm_helper.py
plant-growth-module/tests/: test_pgm_helper.py
