[project]
name = "phishes-data-downloader"
version = "1.0.0"
description = "PHISHES Digital Platform - Data Download Module for soil science datasets"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PHISHES Team" }]
keywords = ["soil science", "geospatial", "azure", "zarr", "data download"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core data processing
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "xarray>=2023.1.0",
    "zarr>=2.13.0",
    "dask>=2023.1.0",
    "netCDF4>=1.6.5",
    # Geospatial libraries
    "geopandas>=0.12.0",
    "shapely>=2.0.0",
    "rasterio>=1.3.0",
    "rioxarray>=0.15.0",
    "pyproj>=3.4.0",
    "fiona>=1.9.0",
    "mikeio>=1.0.0",
    # Azure cloud storage
    "adlfs>=2023.1.0",
    "fsspec>=2023.1.0",
    "azure-storage-blob>=12.14.0",
    "azure-identity>=1.12.0",
    # Visualization
    "matplotlib>=3.6.0",
    "cartopy>=0.21.0",
    # Progress bars
    "tqdm>=4.65.0",
    # Jupyter
    "ipykernel>=6.20.0",
]

[project.optional-dependencies]
jupyter = ["jupyter>=1.0.0", "ipywidgets>=8.0.0"]
dev = ["pytest>=7.2.0", "black>=23.1.0", "flake8>=6.0.0", "ruff>=0.1.0"]
all = ["phishes-data-downloader[jupyter,dev]"]

[dependency-groups]
dev = ["pytest>=7.2.0", "black>=23.1.0", "ruff>=0.1.0"]

[project.scripts]
phishes-setup = "setup_folder_structure:main"
phishes-download = "download_datasets:main"

[project.urls]
Homepage = "https://github.com/phishes/data-downloader"
Documentation = "https://github.com/phishes/data-downloader/blob/main/README.md"
Repository = "https://github.com/phishes/data-downloader"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["analysis", "core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
