[project]
name = "plant-growth-module"
version = "0.1.0"
description = "Plant Growth Module (PGM) for MIKE SHE Integration. Use 'uv sync --link-mode copy' on OneDrive."
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "mikeio>=1.6.0",
    "streamlit>=1.30.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0.0", "ipykernel>=6.0.0"]

[dependency-groups]
dev = ["jupyter>=1.0.0", "ipykernel>=6.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.pip]
link-mode = "copy"
